--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,26 +1,19 @@
 ## https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
+set -g prefix C-a
+bind C-a send-prefix
 bind r source-file ~/.tmux.conf
-# switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-# Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
-# don't rename windows automatically
-set-option -g allow-rename off
+set -g allow-rename off
 set -g status-right ''
 
 # https://unix.stackexchange.com/a/577104
 set -g default-terminal "xterm-256color"
 
 # https://github.com/tmux-plugins/tmux-yank
-run-shell ~/clone/path/yank.tmux
+run ~/clone/path/yank.tmux
+
+# https://github.com/tmux/tmux/issues/3150#issuecomment-1093557662
+set -g pane-border-lines heavy
+
