--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,4 @@ run ~/clone/path/yank.tmux
 # https://github.com/tmux/tmux/issues/3150#issuecomment-1093557662
 set -g pane-border-lines heavy
 
+set -g mode-keys vi
