Tmux status-keys emacs, escape-time reduced
1. Make emacs bindings work in tmux command prompt

2. Reduced escape timeout, which was otherwise problematic in Vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,9 +12,15 @@ set -g status-right ''
 set -g default-terminal "xterm-256color"
 
 # https://github.com/tmux-plugins/tmux-yank
-run ~/clone/path/yank.tmux
+run ~/clone/tmux-yank/yank.tmux
 
 # https://github.com/tmux/tmux/issues/3150#issuecomment-1093557662
 set -g pane-border-lines heavy
 
 set -g mode-keys vi
+
+# https://superuser.com/a/1530689/1752376
+set -g status-keys emacs
+
+# https://vi.stackexchange.com/a/30801/47788
+set -sg escape-time 10
