Remove comments and refactor

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,24 +1,23 @@
-## https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
-# remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
-bind r source-file ~/.tmux.conf
-set -g mouse on
+
 set -g allow-rename off
+set -g mouse on
+set -g focus-events on
+
+set -g escape-time 10
+
 set -g status-right ''
-
-# https://github.com/tmux-plugins/tmux-yank
-run ~/clone/tmux-yank/yank.tmux
-
-# https://github.com/tmux/tmux/issues/3150#issuecomment-1093557662
 set -g pane-border-lines heavy
 
 set -g mode-keys vi
-
-# https://superuser.com/a/1530689/1752376
 set -g status-keys emacs
 
-# https://vi.stackexchange.com/a/30801/47788
-set -sg escape-time 10
+set -g default-terminal tmux-256color
+set -ag terminal-features ,xterm-256color:RGB
+
+bind r source ~/.tmux.conf
+
+run ~/clone/tmux-yank/yank.tmux
 
