Add kill-session & resizing bindings in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,19 @@ bind r source ~/.tmux.conf
 
 run ~/clone/tmux-yank/yank.tmux
 
+bind k 'kill-session'
+
+bind u switch-client -T horizontalResizing
+
+bind -T horizontalResizing 1 'resizep -x 25%'
+bind -T horizontalResizing 2 'resizep -x 33%'
+bind -T horizontalResizing 3 'resizep -x 50%'
+bind -T horizontalResizing 4 'resizep -x 75%'
+
+bind v switch-client -T verticalResizing
+
+bind -T verticalResizing 1 'resizep -y 25%'
+bind -T verticalResizing 2 'resizep -y 33%'
+bind -T verticalResizing 3 'resizep -y 50%'
+bind -T verticalResizing 4 'resizep -y 75%'
+
